--- a/FZAirMeal-Swift/FZAirMeal/Presentation Layer/View/Base.lproj/Main.storyboard
+++ b/FZAirMeal-Swift/FZAirMeal/Presentation Layer/View/Base.lproj/Main.storyboard
@@ -578,8 +578,22 @@
                             <constraint firstAttribute="trailing" secondItem="gAL-OY-kJO" secondAttribute="trailing" id="xTN-zo-mjD"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Orders" id="sXi-SW-kVR"/>
+                    <navigationItem key="navigationItem" title="Orders" id="sXi-SW-kVR">
+                        <barButtonItem key="rightBarButtonItem" style="done" id="d5O-oU-K9j">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="s7u-bR-kJa">
+                                <rect key="frame" x="252" y="4.6666666666666679" width="125" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Cancel Order"/>
+                                <connections>
+                                    <action selector="barButtonCancelOrderTapped:" destination="cfk-Pt-1Tj" eventType="touchUpInside" id="Fud-IS-J6v"/>
+                                    <action selector="placeOrderButtonTapped:" destination="QMh-cA-PTL" eventType="touchUpInside" id="ZbH-hY-vAL"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="barButtonCancelOrder" destination="d5O-oU-K9j" id="ING-w9-F6r"/>
                         <outlet property="tblOrderList" destination="gAL-OY-kJO" id="G1J-Kh-8FF"/>
                     </connections>
                 </viewController>
